--- a/Game/.classpath
+++ b/Game/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry excluding="hooke-sample/|hooke-sample/" kind="src" path="prototype"/>
 	<classpathentry kind="src" path="res"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="src" path="SST_Media"/>
+	<classpathentry kind="src" path="SST_src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
